# xxljob-sdk-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: Cargo.toml
examples/src/: auto_local_addr.rs  multi_registry.rs  registry.rs  unregister.rs
src/: lib.rs
src/client/: admin_client.rs  builder.rs  client.rs  mod.rs
src/common/: client_config.rs  constant.rs  ip_utils.rs  mod.rs  share_data.rs
src/common/model/: admin_request.rs  api_model.rs  enum_type.rs  handler.rs  mod.rs
src/executor/: admin_server.rs  core.rs  mod.rs  model.rs  registry.rs
src/server/: mod.rs  web_server.rs  xxlapi.rs
src/server/middle/: mod.rs
src/server/model/: mod.rs
