[package]
name = "xxljob-sdk-rs"
version = "0.1.0"
edition = "2021"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "rust实现的xxl-job sdk(客户端执行器)"
repository = "https://github.com/heqingpan/xxljob-sdk-rs"
readme = "README.md"
keywords = ["xxljob", "xxl-job"]


[workspace]
members = [
    ".",
    "examples",
]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_urlencoded = "0.7"
actix-web = "4"
actix-http = "3"
actix = "0.13"
actix-rt = "2"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
log = "0.4"
env_logger = "0.11"
env_logger_timezone_fmt = "0.1.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
lazy_static = "1.4"
bean_factory = "0.1.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
async-trait = "0.1"
if-addrs = "0.13.3"
