[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
xxljob-sdk-rs = {path = ".."}
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.6.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0"
env_logger = "0.7"
ctrlc = "3.4.0"
async-trait = "0.1"


[[example]]
name = "registry"
path = "src/registry.rs"

[[example]]
name = "auto_local_addr"
path = "src/auto_local_addr.rs"
